--- a/GunfireRebornBhaptics/GunfireRebornBhaptics.csproj
+++ b/GunfireRebornBhaptics/GunfireRebornBhaptics.csproj
@@ -15,26 +15,22 @@
   
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Gunfire Reborn\BepInEx\core\0Harmony.dll</HintPath>
+      <HintPath>..\libs\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Gunfire Reborn\BepInEx\unhollowed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\libs\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx.Core">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Gunfire Reborn\BepInEx\core\BepInEx.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="BepInEx.Preloader.Core">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Gunfire Reborn\BepInEx\core\BepInEx.Preloader.Core.dll</HintPath>
+      <HintPath>..\libs\BepInEx.Core.dll</HintPath>
     </Reference>
     <Reference Include="Bhaptics.Tact">
-      <HintPath>..\..\Bhaptics.Tact.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\libs\Bhaptics.Tact.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Gunfire Reborn\BepInEx\unhollowed\UnityEngine.dll</HintPath>
+      <HintPath>..\libs\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Gunfire Reborn\BepInEx\unhollowed\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>..\libs\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
