--- a/GunfireRebornBhaptics/GunfireRebornBhaptics.csproj
+++ b/GunfireRebornBhaptics/GunfireRebornBhaptics.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net35</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <AssemblyName>GunfireRebornBhaptics</AssemblyName>
     <Description>GunfireRebornBhaptics</Description>
     <Version>1.0.0</Version>
@@ -10,7 +10,7 @@
   </PropertyGroup>
   
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all" />
   </ItemGroup>
   
   <ItemGroup>
@@ -22,6 +22,9 @@
     </Reference>
     <Reference Include="BepInEx.Core">
       <HintPath>..\libs\BepInEx.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="BepInEx.IL2CPP">
+      <HintPath>..\libs\BepInEx.IL2CPP.dll</HintPath>
     </Reference>
     <Reference Include="Bhaptics.Tact">
       <HintPath>..\libs\Bhaptics.Tact.dll</HintPath>
